# Lorn.ADSP.Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/05-infrastructure/common/: Cargo.toml
crates/05-infrastructure/common/src/: component.rs  configuration.rs  conventions.rs  discovery.rs  errors.rs  health.rs  lib.rs  lifecycle.rs  metadata.rs
crates/05-infrastructure/composition/: Cargo.toml
crates/05-infrastructure/composition/examples/: component_discovery_example.rs  component_discovery_simple.rs
crates/05-infrastructure/composition/src/: bootstrapper.rs  builder.rs  component_scanner.rs  config_sources.rs  enhanced_component_scanner.rs  infrastructure.rs  lib.rs
crates/05-infrastructure/composition/src/tests/: integration_tests.rs
crates/05-infrastructure/config-abstractions/: Cargo.toml
crates/05-infrastructure/config-abstractions/src/: events.rs  lib.rs  manager.rs  provider.rs  validator.rs  watcher.rs
crates/05-infrastructure/config-impl/: Cargo.toml
crates/05-infrastructure/config-impl/src/: advanced_validator.rs  binder.rs  event_handler.rs  lib.rs  manager.rs  providers.rs  validation.rs  watcher.rs
crates/05-infrastructure/config-impl/src/tests/: hot_reload_tests.rs
crates/05-infrastructure/di-abstractions/: Cargo.toml
crates/05-infrastructure/di-abstractions/src/: container.rs  discovery.rs  factory.rs  lib.rs  registry.rs  resolver.rs  scanner.rs
crates/05-infrastructure/di-impl/: Cargo.toml
crates/05-infrastructure/di-impl/src/: lib.rs
crates/05-infrastructure/di-impl/tests/: integration_test.rs
crates/09-tools/component-macros/: Cargo.toml  README.md
crates/09-tools/component-macros/src/: component.rs  configurable.rs  lib.rs  lifecycle.rs  utils.rs
crates/09-tools/component-macros/tests/: integration_tests.rs
docs_ProjectManage/: 开发路线图.md  核心基础架构实施计划.md  核心基础架构实现计划.md
docs_TecDesign/: README.md  数据访问层技术设计.md  核心基础架构设计文档.md  系统整体技术架构.md
docs_TecDesign/广告投放引擎/: GeoTargeting重命名迁移指南.md  TargetingConfig和TargetingPolicy重构变更总结.md  地理定向系统设计说明.md  定向实体关系详解.md  定向策略架构改进方案.md  广告引擎抽象层设计.md  广告投放引擎技术设计.md  广告投放引擎数据访问层技术设计.md  数据外部协议对象设计.md  数据模型关系修正说明.md  数据模型分层设计.md  数据结构VisualStudio项目架构映射.md
docs_TecDesign/广告投放引擎/广告效果监测服务设计/: 广告效果监测服务接口设计.md  广告效果监测服务数据结构设计.md  广告效果监测服务数据访问层设计.md
docs_TecDesign/广告投放引擎/广告调度服务设计/: 广告调度服务技术架构设计.md
docs_TecDesign/系统配置化和依赖注入设计/: README.md  多组件共享配置选项解决方案.md  实施计划.md  快速开始指南.md  组件发现机制改进实现说明.md  统一配置化和依赖注入架构设计.md
example-app/: Cargo.standalone.toml  README.md
example-app/config/: app.json  app.toml
example-app/src/: main.rs
examples/: component_discovery_demo.rs
examples/demo-package/: Cargo.toml
examples/demo-package/src/: main.rs
examples/infrastructure/composition-advanced/: Cargo.toml
examples/infrastructure/composition-advanced/src/: main.rs
examples/infrastructure/composition-simple/: Cargo.toml
examples/infrastructure/composition-simple/src/: main.rs
infrastructure/di-impl/: Cargo.toml
infrastructure/di-impl/src/: lib.rs
tests/component-macros-integration/: Cargo.toml
tests/component-macros-integration/tests/: integration_tests.rs  trybuild.rs
tests/component-macros-integration/tests/trybuild/: component_fail.rs  component_fail.stderr  component_ok.rs  fail_missing_lifecycle.rs  fail_missing_lifecycle.stderr  ok_component.rs
tests/di-impl-integration/: Cargo.toml
tests/di-impl-integration/tests/: integration_test.rs
