[package]
name = "di-impl"
version = "0.1.0"
edition = "2021"
description = "Lorn ADSP 依赖注入具体实现"
authors = ["Lorn"]
license = "MIT"

[dependencies]
# 基础设施层依赖
infrastructure-common = { path = "../common" }
di-abstractions = { path = "../di-abstractions" }

# 异步支持
tokio = { workspace = true }
async-trait = { workspace = true }

# 日志
tracing = { workspace = true }

# 标准库增强
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
