[package]
name = "infrastructure-composition"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Infrastructure composition layer for Lorn ADSP"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
infrastructure-common = { path = "../common" }
config-abstractions = { path = "../config-abstractions" }
config-impl = { path = "../config-impl" }
di-abstractions = { path = "../di-abstractions" }
di-impl = { path = "../di-impl" }
component-macros = { path = "../../09-tools/component-macros" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
uuid.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "infrastructure_composition"
path = "src/lib.rs"
