[package]
name = "config-abstractions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management abstractions for Lorn ADSP"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
infrastructure-common = { path = "../common" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
notify.workspace = true
glob = "0.3"
regex = "1.0"
chrono.workspace = true
uuid.workspace = true

[lib]
name = "config_abstractions"
path = "src/lib.rs"
