[package]
name = "config-impl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management implementation for Lorn ADSP"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
infrastructure-common = { path = "../common" }
config-abstractions = { path = "../config-abstractions" }
async-trait.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
config.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
notify.workspace = true
regex = "1.10"
glob = "0.3"
dashmap.workspace = true
parking_lot.workspace = true

[lib]
name = "config_impl"
path = "src/lib.rs"
