[package]
name = "di-impl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Dependency injection implementation for Lorn ADSP"
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
# 基础设施层依赖
infrastructure-common = { path = "../common" }
di-abstractions = { path = "../di-abstractions" }

# 异步支持
tokio.workspace = true
async-trait.workspace = true

# 日志
tracing.workspace = true

# 标准库增强
anyhow.workspace = true

[dev-dependencies]
tokio-test = "0.4"
